; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_protocol.c_update_user_agent.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_protocol.c_update_user_agent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@internet_session = common dso_local global i64 0, align 8
@INTERNET_OPTION_USER_AGENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @update_user_agent(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i64, i64* @internet_session, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load i64, i64* @internet_session, align 8
  %7 = load i32, i32* @INTERNET_OPTION_USER_AGENT, align 4
  %8 = load i32*, i32** %2, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @strlenW(i32* %9)
  %11 = call i32 @InternetSetOptionW(i64 %6, i32 %7, i32* %8, i32 %10)
  br label %12

12:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @InternetSetOptionW(i64, i32, i32*, i32) #1

declare dso_local i32 @strlenW(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
